--- a/steps/templates/base.html
+++ b/steps/templates/base.html
@@ -71,7 +71,7 @@
                   <a class="nav-link" href="{% url 'change' %}">Change</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://next-steps.azurewebsites.net/admin">Admin</a>
+                  <a class="nav-link" href="/admin">Admin</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
